settings dependencies e modifica build.gradle